# LinkinDAW

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  DEMO_FREEZE_v0.md  LICENSE  PUBLIC_ALPHA_CHECKLIST.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  config.h  implementation_plan.md  walkthrough.md  web_app_design.md
WebApp/: package-lock.json
WebApp/public/: worklet.js
WebApp/public/axion/: probe.html
WebApp/public/axion/linkindaw-axion-probe/: probe.html
WebApp/public/axion/linkindaw-axion-probe/src/axion/: audio-engine.js  axion-app.js  linkindaw-webrtc-adapter.js  param-mapper-wrapper.js
WebApp/public/axion/linkindaw-axion-probe/src/styles/: axion.css
WebApp/public/axion/src/axion/: arcana-processor.js  linkindaw-webrtc-adapter.js
WebApp/public/axion/src/styles/: axion.css
WebApp/public/axion/wasm/: arcana_core.wasm
WebApp/public/enigma/: index.html
WebApp/public/wasm/: audio_engine.js  audio_engine.wasm
WebApp/src/: App.tsx  index.css
WebApp/src/network/: Socket.ts
WebApp/wasm/: audio_engine.cpp  build.bat
src/: LinkinDAW.cpp  LinkinDAW.h  NativeWebRtcPeer.cpp  NativeWebRtcPeer.h  StaticFileServer.cpp  StaticFileServer.h  WebSocketServer.cpp  WebSocketServer.h
tools/: axi-to-midi.mjs  https-local-ws-probe.mjs  update-vst3.ps1
tools/webrtc-poc/: README.md  browser-datachannel-probe.mjs  cloud-signaling-poc.mjs  linkindaw-native-peer-integration-poc.mjs  native-datachannel-probe.mjs  webapp-adapter-integration-poc.mjs
tools/webrtc-poc/axion-adapter-worker/: README.md  worker.mjs  wrangler.toml
tools/webrtc-poc/cloudflare-signaling/: README.md  worker.mjs  wrangler.toml
tools/webrtc-poc/native-peer/: CMakeLists.txt  mbedtls-user-config.h  native-answer-peer.cpp  native-linkindaw-bridge-probe.cpp
